// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create account rejects on duplicate username 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "code": "API_INVALID_INPUT",
        "data": Object {
          "password": "Username already taken",
        },
      },
    },
    "locations": Array [
      Object {
        "column": 3,
        "line": 2,
      },
    ],
    "message": "Invalid Input",
    "path": Array [
      "createAccount",
    ],
  },
]
`;

exports[`Create account rejects weak passwords 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "code": "API_INVALID_INPUT",
        "data": Object {
          "password": "Password too weak",
        },
      },
    },
    "locations": Array [
      Object {
        "column": 3,
        "line": 2,
      },
    ],
    "message": "Invalid Input",
    "path": Array [
      "createAccount",
    ],
  },
]
`;
